New Crowdin translations (#1951)
* New translations strings.xml (English, Australia)

* New translations strings.xml (French)

* New translations strings.xml (French)

* New translations strings.xml (French)

* New translations strings.xml (French)

* New translations strings.xml (French)

* New translations strings.xml (Flemish)

* New translations strings.xml (German)

* New translations strings.xml (German)

* New translations strings.xml (German)

* New translations strings.xml (German)

* New translations strings.xml (German)

* New translations strings.xml (Galician)

* New translations strings.xml (Galician)

* New translations strings.xml (Georgian)

* New translations strings.xml (Finnish)

* New translations strings.xml (Esperanto)

* New translations strings.xml (English, United Kingdom)

* New translations strings.xml (Filipino)

* New translations strings.xml (Estonian)

* New translations strings.xml (Faroese)

* New translations strings.xml (Arabic)

* New translations strings.xml (Arabic)

* New translations strings.xml (Arabic)

* New translations strings.xml (Arabic)

* New translations strings.xml (Armenian)

* New translations strings.xml (Amharic)

* New translations strings.xml (Asturian)

* New translations strings.xml (Azerbaijani)

* New translations strings.xml (Assamese)

* New translations strings.xml (Afar)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Acholi)

* New translations strings.xml (Akan, Twi)

* New translations strings.xml (Albanian)

* New translations strings.xml (Akan)

* New translations strings.xml (Cherokee)

* New translations strings.xml (Bulgarian)

* New translations strings.xml (Breton)

* New translations strings.xml (Burmese)

* New translations strings.xml (Chechen)

* New translations strings.xml (Catalan)

* New translations strings.xml (Basque)

* New translations strings.xml (Basque)

* New 

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -278,11 +278,11 @@
   <string name="flash_off">Flash [OFF]</string>
   <string name="ring_on">Ring [ON]</string>
   <string name="ring_off">Ring [OFF]</string>
-  <string name="auto_focus_on">Auto Focus [ON]</string>
-  <string name="auto_focus_off">Auto Focus [OFF]</string>
-  <string name="formats">Formats</string>
-  <string name="choose_formats">Choose Formats</string>
-  <string name="select_camera">Select a Camera</string>
+  <string name="auto_focus_on">מיקוד אוטומטי [פעיל]</string>
+  <string name="auto_focus_off">מיקוד אוטומטי [כבוי]</string>
+  <string name="formats">תבניות</string>
+  <string name="choose_formats">בחירת תבניות</string>
+  <string name="select_camera">בחירת מצלמה</string>
   <string name="ok_button">אישור</string>
   <string name="cancel_button">Cancel</string>
   <string name="login_button">שם משתמש</string>
