--- a/app/src/main/res/values-yo/strings.xml
+++ b/app/src/main/res/values-yo/strings.xml
@@ -8,19 +8,19 @@
     <item quantity="other">%d minutes ago</item>
   </plurals>
   <plurals name="hours">
-    <item quantity="other">%d hours ago</item>
+    <item quantity="other">%d awọn wakati sẹhin</item>
   </plurals>
   <plurals name="days">
-    <item quantity="other">%d days ago</item>
+    <item quantity="other">%d ọjọ seyin</item>
   </plurals>
-  <string name="action_settings">Settings</string>
-  <string name="action_about">About</string>
-  <string name="action_discover">Discover</string>
-  <string name="contribute">How to contribute</string>
-  <string name="action_find">Find</string>
-  <string name="text_barcode">Type the barcode :</string>
-  <string name="message_in_activity_save_product_offline">Only one photo is compulsory to send a new product.</string>
-  <string name="product_incomplete_message">This product is not complete. As a result, we couldn\'t do the allergen check.</string>
+  <string name="action_settings">Ètò</string>
+  <string name="action_about">Nipa</string>
+  <string name="action_discover">Iwari</string>
+  <string name="contribute">Bi o ṣe le ṣe alabapin</string>
+  <string name="action_find">Wa</string>
+  <string name="text_barcode">Tẹ aami-ọja naa :</string>
+  <string name="message_in_activity_save_product_offline">Aworan kan nikan jẹ dandan lati fi ọja titun ranšẹ.</string>
+  <string name="product_incomplete_message">Ọja yi ko pe. Nitorina na, a ko le ṣe ayẹwo ara korira.</string>
   <string name="no_offline_data">You\'re all done</string>
   <string name="first_offline">Products added offline will appear here</string>
   <!-- Image Upload -->
@@ -455,11 +455,11 @@
   <string name="airplane_mode_active_dialog_title">Airplane mode enabled</string>
   <string name="airplane_mode_active_dialog_message">Airplane mode is enabled, please disable this to continue.</string>
   <string name="airplane_mode_active_dialog_negative">Dismiss</string>
-  <string name="airplane_mode_active_dialog_positive">Settings</string>
+  <string name="airplane_mode_active_dialog_positive">Ètò</string>
   <string name="device_offline_dialog_title">Network unavailable</string>
   <string name="device_offline_dialog_message">A network connection is needed to do this, would you like to change this in settings?</string>
   <string name="device_offline_dialog_negative">Dismiss</string>
-  <string name="device_offline_dialog_positive">Settings</string>
+  <string name="device_offline_dialog_positive">Ètò</string>
   <string name="saving">Saving…</string>
   <string name="scan_first_product">Scan First Product</string>
   <string name="preference_enable_mobile_data_title">Upload on mobile data</string>
