--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -272,13 +272,13 @@
   <string name="ring_off">Ring [OFF]</string>
   <string name="auto_focus_on">Auto Focus [ON]</string>
   <string name="auto_focus_off">Auto Focus [OFF]</string>
-  <string name="formats">Formats</string>
-  <string name="choose_formats">Choose Formats</string>
-  <string name="select_camera">Select a Camera</string>
+  <string name="formats">Formatos</string>
+  <string name="choose_formats">Escolha formatos</string>
+  <string name="select_camera">Selecione uma câmera</string>
   <string name="ok_button">Ok</string>
-  <string name="cancel_button">Cancel</string>
+  <string name="cancel_button">Cancelar</string>
   <string name="login_button">Iniciar sessão</string>
-  <string name="create_account_button">Create Account</string>
+  <string name="create_account_button">Criar uma conta</string>
   <string name="warning_alert_data" tools:ignore="StringFormatCount,StringFormatInvalid">A informação das suas alergias nunca será enviada para o servidor da Open Food Facts. Adicionalmente, tenha cuidado com potenciais erros nos dados e a detecção, que poderá não ser 100% precisa, por favor confirme sempre por si mesmo! </string>
   <string name="from_gallery">Galeria de imagens</string>
   <string name="product_sent">Produto enviado com sucesso</string>
@@ -367,7 +367,7 @@
   <string name="number_of_products">Número de produtos: </string>
   <string name="txt_no_results">Sem resultados</string>
   <string name="txt_extend_search">Tente alargar a pesquisa ou adicione o produto</string>
-  <string name="txt_no_matching__category_products">Oh no, we don’t have any product in this category, can you add one?</string>
+  <string name="txt_no_matching__category_products">Infelizmente não temos nenhum produto nesta categoria, você pode adicionar um?</string>
   <string name="txt_no_matching_products">Não encontrámos nenhum produto correspondente.\nPoderá tentar:</string>
   <string name="txt_broaden_search">- alargar a sua pesquisa \n- digitalizar e adicionar ao Open Food Facts</string>
   <string name="txt_cant_load_search_results">Não foi possível carregar os resultados da pesquisa</string>
@@ -498,7 +498,7 @@
   <string name="login_true">Já logado!</string>
   <string name="confirm_logout">Confirme o logout</string>
   <string name="logout_dialog_content">Você tem certeza de sair?</string>
-  <string name="dialog_cancel">Cancel</string>
+  <string name="dialog_cancel">Cancelar</string>
   <string name="choose_resolution">Escolha a resolução</string>
   <string name="pref_resolution_summary">Escolha uma resolução para o upload de imagens</string>
   <string name="image_upload_resolution">Resolução de upload de imagem</string>
@@ -676,29 +676,29 @@
   <string name="contribution_by">Contribuição por</string>
   <string name="title_activity_product">Título</string>
   <string name="description_activity_product">descrição</string>
-  <string name="intent_filter_share_label">Add to Open Food Facts</string>
+  <string name="intent_filter_share_label">Adicionar ao Open Food Facts</string>
   <!-- Used for additive exposure evaluation table -->
-  <string name="overexposure_high">High risk of over exposure</string>
-  <string name="overexposure_moderate">Moderate risk of over exposure</string>
-  <string name="infants">Infants</string>
+  <string name="overexposure_high">Alto risco de excesso de superexposição</string>
+  <string name="overexposure_moderate">Risco moderado de superexposição</string>
+  <string name="infants">Bebés</string>
   <string name="infants_age">&lt; 1</string>
-  <string name="toddlers">Toddlers</string>
-  <string name="toddlers_age">1 to 2</string>
-  <string name="children">Children</string>
-  <string name="children_age">3 to 9</string>
-  <string name="adolescents">Adolescents</string>
-  <string name="adolescents_age">10 to 17</string>
-  <string name="adults">Adults</string>
-  <string name="adults_age">18 to 64</string>
-  <string name="elderly">Elderly</string>
-  <string name="elderly_age">65+</string>
-  <string name="most_people">Most people\n(over 50%)</string>
-  <string name="some_people">Some people\n(over 5%)</string>
-  <string name="safety_and_exposure_assessment">Safety and exposure assessment</string>
-  <string name="risk_of_exposure">Risk of exposure</string>
-  <string name="efsa_warning_moderate_risk">The European Food Safety Authority (EFSA) has determined that some population groups have a moderate risk of consuming too much %1$s.</string>
-  <string name="efsa_warning_high_risk">The European Food Safety Authority (EFSA) has determined that some population groups have a high risk of consuming too much %1$s.</string>
-  <string name="legend_noael">above dose with observed adverse effect (NOAEL)</string>
-  <string name="legend_adi">above Acceptable Daily Intake (ADI)</string>
+  <string name="toddlers">Crianças pequenas</string>
+  <string name="toddlers_age">1 a 2</string>
+  <string name="children">Crianças</string>
+  <string name="children_age">3 a 9</string>
+  <string name="adolescents">Adolescentes</string>
+  <string name="adolescents_age">10 a 17</string>
+  <string name="adults">Adultos</string>
+  <string name="adults_age">18 a 64</string>
+  <string name="elderly">Idosos</string>
+  <string name="elderly_age">>65</string>
+  <string name="most_people">A maioria das pessoas\n(mais de 50%)</string>
+  <string name="some_people">Algumas pessoas\n(mais de 5%)</string>
+  <string name="safety_and_exposure_assessment">Avaliação de segurança e exposição</string>
+  <string name="risk_of_exposure">Risco de exposição</string>
+  <string name="efsa_warning_moderate_risk">A Autoridade Europeia para a Segurança dos Alimentos (EFSA) determinou que alguns grupos populacionais têm um risco moderado de consumir muito %1$s.</string>
+  <string name="efsa_warning_high_risk">A Autoridade Europeia para a Segurança dos Alimentos (EFSA) determinou que alguns grupos populacionais têm um alto risco de consumir muito %1$s.</string>
+  <string name="legend_noael">dose acima com efeito adverso observado (NOAEL)</string>
+  <string name="legend_adi">acima de ingestão diária aceitável (ADI)</string>
   <!-- Used for additive exposure evaluation table -->
 </resources>
