--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -8,10 +8,10 @@
     <item quantity="other">%d分钟前</item>
   </plurals>
   <plurals name="hours">
-    <item quantity="other">%d hours ago</item>
+    <item quantity="other">%d 小时之前</item>
   </plurals>
   <plurals name="days">
-    <item quantity="other">%d days ago</item>
+    <item quantity="other">%d 天之前</item>
   </plurals>
   <string name="action_settings">设置</string>
   <string name="action_about">关于</string>
@@ -19,7 +19,7 @@
   <string name="contribute">如何贡献</string>
   <string name="action_find">查找</string>
   <string name="text_barcode">输入条形码：</string>
-  <string name="message_in_activity_save_product_offline">Only one photo is compulsory to send a new product.</string>
+  <string name="message_in_activity_save_product_offline">至少需要一张照片来创建新的产品。</string>
   <string name="product_incomplete_message">该产品还未完成。因此，我们无法做过敏原检查。</string>
   <string name="no_offline_data">你已经全部完成</string>
   <string name="first_offline">离线添加的产品将显示在此处</string>
@@ -70,48 +70,48 @@
     do not change the order of the array as the items are paired with the String array
     PARAMS_OTHER_NUTRIENTS present in AddProductNutritionFactsFragment-->
   <string-array name="nutrients_array">
-    <item>Alpha-linolenic acid / ALA (18:3 n-3)</item>
-    <item>Arachidic acid (20:0)</item>
-    <item>Arachidonic acid / AA / ARA (20:4 n-6)</item>
-    <item>Behenic acid (22:0)</item>
+    <item>α-亚麻酸 / ALA (18:3 n-3)</item>
+    <item>花生酸 (20:0)</item>
+    <item>花生四烯酸 / AA / ARA (20:4 n-6)</item>
+    <item>山嵛酸 (22:0)</item>
     <item>碳酸氢钠</item>
     <item>生物素</item>
-    <item>Butyric acid (4:0)</item>
+    <item>丁酸 (4:0)</item>
     <item>咖啡因</item>
     <item>钙</item>
-    <item>Capric acid (10:0)</item>
-    <item>Caproic acid (6:0)</item>
-    <item>Caprylic acid (8:0)</item>
+    <item>癸酸 (10:0)</item>
+    <item>己酸 (6:0)</item>
+    <item>辛酸 (8:0)</item>
     <item>酪蛋白</item>
-    <item>Cerotic acid (26:0)</item>
+    <item>蜡酸 (26:0)</item>
     <item>氯化物</item>
     <item>胆固醇</item>
     <item>铬</item>
     <item>铜</item>
-    <item>Dihomo-gamma-linolenic acid / DGLA (20:3 n-6)</item>
-    <item>Docosahexaenoic acid / DHA (22:6 n-3)</item>
-    <item>Eicosapentaenoic acid / EPA (20:5 n-3)</item>
-    <item>Elaidic acid (18:1 n-9)</item>
-    <item>Erucic acid (22:1 n-9)</item>
+    <item>二高-γ-亚麻酸 / DGLA (20:3 n-6)</item>
+    <item>二十二碳六烯酸 / DHA (22:6 n-3)</item>
+    <item>二十碳五烯酸 / EPA (20:5 n-3)</item>
+    <item>乙二酸 (18:1 n-9)</item>
+    <item>芥酸 (22:1 n-9)</item>
     <item>氟</item>
     <item>果糖</item>
-    <item>Gamma-linolenic acid / GLA (18:3 n-6)</item>
+    <item>γ-亚麻酸 / GLA (18:3 n-6)</item>
     <item>葡萄糖</item>
-    <item>Gondoic acid (20:1 n-9)</item>
+    <item>贡多酸 (20:1 n-9)</item>
     <item>碘</item>
     <item>铁</item>
     <item>乳糖</item>
-    <item>Lauric acid (12:0)</item>
-    <item>Lignoceric acid (24:0)</item>
-    <item>Linoleic acid / LA (18:2 n-6)</item>
+    <item>月桂酸 (12:0)</item>
+    <item>木瓜酸 (24:0)</item>
+    <item>亚油酸 / LA (18:2 n-6)</item>
     <item>镁</item>
     <item>麦芽糖</item>
     <item>麦芽糖</item>
     <item>锰</item>
-    <item>Mead acid (20:3 n-9)</item>
+    <item>米德酸 (20:3 n-9)</item>
     <item>Melissic acid (30:0)</item>
     <item>钼</item>
-    <item>Monounsaturated fat</item>
+    <item>单元不饱和脂肪</item>
     <item>Montanic acid (28:0)</item>
     <item>Myristic acid (14:0)</item>
     <item>Nervonic acid (24:1 n-9)</item>
@@ -573,26 +573,26 @@
   <string name="contribution_tab_title">Show contribution tab</string>
   <string name="product">Edit</string>
   <string name="txtDialogsTitle">信息</string>
-  <string name="preference_show_all_product_photos_title">Show all product photos</string>
+  <string name="preference_show_all_product_photos_title">显示所有产品照片</string>
   <string name="preference_show_all_product_photos_summary">Show all product photos submitted in a separate tab</string>
-  <string name="offline_product_addition_title">Add a new product</string>
-  <string name="productNameNull">Name unknown</string>
-  <string name="productBrandNull">Brand unknown</string>
-  <string name="productQuantityNull">Quantity unknown</string>
-  <string name="product_not_complete">This product is not yet complete. \nCan you add some details?</string>
-  <string name="addProductOffline">You seem offline. Add the product %s using the offline mode ?</string>
-  <string name="product_not_found">The product %1$s you scanned does not exist yet in Open Food Facts. Can you add it?</string>
-  <string name="scan_sound">Scan sound</string>
-  <string name="trouble_scanning">Trouble Scanning?</string>
-  <string name="barcode_hint">Trouble Scanning? Enter Barcode</string>
-  <string name="switch_camera">Switch camera</string>
-  <string name="autofocus">Autofocus</string>
-  <string name="initial_loading">Initial loading</string>
+  <string name="offline_product_addition_title">添加新产品</string>
+  <string name="productNameNull">名称未知</string>
+  <string name="productBrandNull">品牌未知</string>
+  <string name="productQuantityNull">数量未知</string>
+  <string name="product_not_complete">这个产品还未完成。\n您可以添加一些细节吗？</string>
+  <string name="addProductOffline">你已离线。要使用离线模式添加产品 %s 吗？</string>
+  <string name="product_not_found">你扫描的产品 %1$s 尚未存在在 Open Food Facts 中。你可以添加它吗？</string>
+  <string name="scan_sound">扫描提示音</string>
+  <string name="trouble_scanning">扫描时遇到问题？</string>
+  <string name="barcode_hint">扫描时遇到问题？输入条形码：</string>
+  <string name="switch_camera">切换摄像头</string>
+  <string name="autofocus">自动对焦</string>
+  <string name="initial_loading">初始加载</string>
   <string name="preferences">偏好</string>
   <string name="OFFlogo">Open Food Facts logo</string>
-  <string name="loading_product">Loading product %s</string>
+  <string name="loading_product">加载产品 %s</string>
   <string name="error_adding_ingredients">Something went wrong while trying to add product ingredients</string>
-  <string name="unable_to_extract_ingredients">Unable to extract ingredients from image</string>
+  <string name="unable_to_extract_ingredients">无法从图像中提取成分</string>
   <string name="error_adding_nutrition_facts">Something went wrong while trying to add product nutrition facts</string>
   <string name="error_in_carbohydrate_value">Carbohydrate can\'t be less than the sum of sugar and starch</string>
   <string name="choose_nutrient">Choose a nutrient</string>
@@ -616,7 +616,7 @@
   <string name="save_product">Do you want to save the product?</string>
   <string name="error_adding_product">Something went wrong when adding product</string>
   <string name="photos">Photos</string>
-  <string name="please_wait">Please wait</string>
+  <string name="please_wait">请稍候</string>
   <string name="product_uploaded_successfully">Product uploaded successfully</string>
   <string name="no_internet_connection">You appear to have no internet connection, images will be uploaded when network is available</string>
   <string name="no_internet_unable_to_extract_ingredients">No internet connection. Unable to extract ingredients</string>
