--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     </string-array>
 
     <!-- Text units -->
-    <string-array name="units_array">
+    <string-array name="units_array" translatable="false">
         <item>g</item>
         <item>mg</item>
         <item>kg</item>
@@ -56,20 +56,20 @@
     </string-array>
 
     <!-- weight units -->
-    <string-array name="weights_array">
+    <string-array name="weights_array" translatable="false">
         <item>g</item>
         <item>mg</item>
         <item>kg</item>
     </string-array>
 
     <!-- nutrition energy units -->
-    <string-array name="energy_units">
+    <string-array name="energy_units" translatable="false">
         <item>kcal</item>
         <item>kj</item>
     </string-array>
 
     <!-- nutrition weight units -->
-    <string-array name="nutrition_weight_units">
+    <string-array name="nutrition_weight_units" translatable="false">
         <item>g</item>
         <item>mg</item>
         <item>µg</item>
