--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -645,6 +645,7 @@
 
     <string name="can_add_barcode">Having trouble scanning?\nDrag up to type the barcode</string>
     <string name="wikidata_information">Going further</string>
+    <string name="wikidata_unavailable">There is no Wikipedia page in your language yet.</string>
     <string name="description">Description: </string>
     <string name="title">Title: </string>
     <string name="Wikipedia">View on Wikipedia</string>
@@ -652,6 +653,7 @@
     <string name="swipe_down">Swipe down</string>
     <string name="brand_string">Brand</string>
     <string name="additive_string">Additive</string>
+    <string name="allergen_string">Allergen</string>
     <string name="search_string">Search</string>
     <string name="country_string">Countries where sold</string>
     <string name="store_subtitle">Store</string>
