--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -35,7 +35,7 @@
     <item>غذائیت</item>
     <item>غذائیت ٹیبل</item>
   </string-array>
-  <!-- Text units --
+  <!-- Text units -->
   <!-- weight units -->
   <!-- nutrition energy units -->
   <!-- nutrition weight units -->
