--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -869,7 +869,7 @@
     <string name="EditDiet_Authorised_Ingredients">Authorised ingredients</string>
     <string name="EditDiet_Hint_Ingredient_Authorised">List the authorised ingredients that should appear in green. Example : apple, mushroom, tomato… You can complete this list later.</string>
     <string name="EditDiet_So_So_Ingredients">So so ingredients</string>
-    <string name="EditDiet_Hint_So_So_Ingredient">List the so so ingredients that should appears in orange. Example : Egg, Fish... You can complete this list latter.</string>
+    <string name="EditDiet_Hint_So_So_Ingredient">List the problematic ingredients that should appear in orange. Example : Egg, Fish... You can complete this list later.</string>
     <string name="EditDiet_Unauthorised_Ingredients">Unauthorised ingredients</string>
     <string name="EditDiet_Hint_Unauthorised_Ingredient">List the unauthorised ingredients that should appears in red. Example : Gluten, Milk, Palm oil, Sugar... You can complete this list latter.</string>
     <!-- Used for diets AddOn -->
