--- a/app/src/opf/res/values-it/strings.xml
+++ b/app/src/opf/res/values-it/strings.xml
@@ -12,7 +12,7 @@
     <!-- For fr, Replace by https://world-fr.openproductsfacts.org/contributeur/ -->
     <string name="website_contributor">https://world.openfoodfacts.org/contributor/</string>
     <string name="terms_url">https://it.openproductsfacts.org/terms-of-use</string>
-    <string name="txtHomeOnline">Open Products Facts is an open database of more than %1$d products (plus the ones you will contribute) in the world.</string>
+    <string name="txtHomeOnline">Open Product Facts è un database aperto di oltre %1$d prodotti (più quelli a cui contribuirai) nel mondo.</string>
     <string name="txtHome">Open Food Facts è un database di prodotti alimentari con ingredienti, allergeni, dati nutrizionali e tutti i frammenti d\'informazione che si possono trovare sulle etichette dei prodotti.</string>
     <string name="slide_1_title">Contribuire alla trasparenza dei prodotti</string>
     <string name="slide_1_desc">Scan products, take them in picture, make food transparency happen</string>
@@ -33,7 +33,7 @@
     <string name="text_offline_info_dialog">Scansione i prodotti anche quando sei offline così che possano essere aggiunti a Open Products Facts successivamente. I prodotti scansionati appariranno qui e potrai inviarli utilizzando il pulsante sottostante.</string>
     <string name="warning_alert_data">Le informazioni sulle tue allergie non saranno mai inviate al server di Oper Products Facts. Inoltre, fai attenzione perché le informazioni sui prodotti potrebbero non essere accurate al 100%, quindi ricorda sempre di controllare! </string>
     <!-- OPF tagline in different languages -->
-    <string name="tagline">the free product database</string>
+    <string name="tagline">il database aperto dei prodotti</string>
     <string name="product_not_found">Il prodotto %1$s scansionato non esiste ancora in Open Products Facts. Puoi aggiungerlo?</string>
     <string name="currently_on_version">Attualmente su Open Products Facts</string>
 </resources>
