--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -688,19 +688,19 @@
     <string name="legend_noael">au-dessus de la dose avec effet indésirable observé (DSENO)</string>
     <string name="legend_adi">au-dessus de la dose journalière admissible (DJA)</string>
     <!-- Used for additive exposure evaluation table -->
-    <!-- Used for diets AddOn -->
-    <string name="your_diets">Your diet(s)</string>
+    <!-- Utilisé par l'AddOn Régime (Diet)-->
+    <string name="your_diets">Vos régime(s)</string>
     <string name="diet_name">Diet name</string>
     <string name="diets_dialog_warning_title">Attention</string>
-    <string name="warning_diets_data">Your diet(s) data stays on your device. Nothing will be uploaded anywhere.</string>
+    <string name="warning_diets_data">Vos données régime(s) reste sur votre appareil. Rien ne sera envoyer nulle part.</string>
     <string name="EditDiet_Name">Nom</string>
     <string name="EditDiet_Description">Description</string>
-    <string name="EditDiet_Enabled_Disabled">Enabled/Disabled</string>
-    <string name="EditDiet_Authorised_Ingredients">Authorized ingredients</string>
-    <string name="EditDiet_Hint_Ingredient_Authorised">List the authorized ingredients that should appear in green. Example : apple, mushroom, tomato… You can complete this list later.</string>
-    <string name="EditDiet_So_So_Ingredients">So so ingredients</string>
-    <string name="EditDiet_Hint_So_So_Ingredient">List the problematic ingredients that should appear in orange. Example : egg, fish… You can complete this list later.</string>
-    <string name="EditDiet_Unauthorised_Ingredients">Unauthorized ingredients</string>
-    <string name="EditDiet_Hint_Unauthorised_Ingredient">List the unauthorized ingredients that should appear in red. Example : gluten, milk, palm oil, sugar... You can complete this list later.</string>
-    <!-- Used for diets AddOn -->
+    <string name="EditDiet_Enabled_Disabled">Utilisé/Inutilisé</string>
+    <string name="EditDiet_Authorised_Ingredients">Ingredients autorisés</string>
+    <string name="EditDiet_Hint_Ingredient_Authorised">Liste les ingrédients autorisés qui doivent apparaître en vert. Exemple : Pomme, Champignon, Tomate... Vous pourrez compléter cette liste plus tard.</string>
+    <string name="EditDiet_So_So_Ingredients">Ingredients couci/couça</string>
+    <string name="EditDiet_Hint_So_So_Ingredient">Liste les ingrédients plus ou moins acceptables qui doivent apparaître en orange. Exemple : Oeufs, Poisson... Vous pourrez compléter cette liste plus tard.</string>
+    <string name="EditDiet_Unauthorised_Ingredients">Ingredients interdits</string>
+    <string name="EditDiet_Hint_Unauthorised_Ingredient">Liste les ingrédients interdits qui doivent apparaître en rouge. Exemple : Gluten, Lait, Huile de palme, Sucre... Vous pourrez compléter cette liste plus tard.</string>
+    <!-- Utilisé par l'AddOn Régime (Diet) -->
 </resources>
