--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -690,9 +690,9 @@
     <!-- Used for additive exposure evaluation table -->
     <!-- Utilisé par l'AddOn Régime (Diet)-->
     <string name="your_diets">Vos régime(s)</string>
-    <string name="diet_name">Diet name</string>
+    <string name="diet_name">Nom du régime</string>
     <string name="diets_dialog_warning_title">Attention</string>
-    <string name="warning_diets_data">Vos données régime(s) reste sur votre appareil. Rien ne sera envoyer nulle part.</string>
+    <string name="warning_diets_data">Vos données régime(s) restent sur votre appareil. Rien ne sera envoyer nulle part.</string>
     <string name="EditDiet_Name">Nom</string>
     <string name="EditDiet_Description">Description</string>
     <string name="EditDiet_Enabled_Disabled">Utilisé/Inutilisé</string>
