--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -246,7 +246,7 @@
     <string name="txt_anonymous">Anonymní uživatel</string>
     <string name="txt_product_not_found">Produkty nebyly nalezeny</string>
     <string name="delete_txt">Odstranit</string>
-    <string name="sign_in_drawer">Podepiš</string>
+    <string name="sign_in_drawer">Přihlásit se</string>
     <string name="alert_drawer">Hlídání alergenů</string>
     <string name="warning_allergens">Obsahuje alergeny</string>
     <string name="title_dialog_alert">Přidat upozornění</string>
@@ -404,7 +404,7 @@
     <string name="vitamin_b9">Vitamín B9</string>
     <string name="vitamin_b12">Vitamín B12</string>
     <string name="biotin">Biotin</string>
-    <string name="pantothenic_acid">Kyselina pantothenová</string>
+    <string name="pantothenic_acid">Kyselina pantotenová</string>
     <string name="nutrition_minerals">Minerály</string>
     <string name="silica">Oxid křemičitý</string>
     <string name="bicarbonate">Jedlá soda</string>
