--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,12 @@
         <item>Environment</item>
     </string-array>
 
+    <!-- New Nav Drawer Product Menu Items -->
+    <string-array name="nav_drawer_new_items_product">
+        <item>Product Photos</item>
+        <item>Ingredient Analysis</item>
+    </string-array>
+
     <!-- Text units -->
     <string-array name="units_array" translatable="false">
         <item>g</item>
@@ -885,5 +891,6 @@
     <string name="category_game_btn">Help categorize products to compute the Nutri-Score</string>
     <string name="version_string">Open Food Facts Android App</string>
     <string name="version">Version</string>
+    <string name="detected_ingredients">Detected Ingredients</string>
     <!-- Used for diets AddOn -->
 </resources>
