Move Environment string to strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
         <item>Ingredients</item>
         <item>Nutrition</item>
         <item>Nutrition Table</item>
+        <item>Environment</item>
     </string-array>
 
     <!-- Text units -->
