--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -879,8 +879,11 @@
     <string name="EditDiet_Hint_So_So_Ingredient">List the problematic ingredients that should appear in orange. Example : egg, fish… You can complete this list later.</string>
     <string name="EditDiet_Unauthorised_Ingredients">Unauthorized ingredients</string>
     <string name="EditDiet_Hint_Unauthorised_Ingredient">List the unauthorized ingredients that should appear in red. Example : gluten, milk, palm oil, sugar... You can complete this list later.</string>
+    <string name="dietExport_1">To have this new diet in Open Food Facts, thanks to open OFF App, goto to menu</string>
+    <string name="dietExport_2">Click on the + button\nThen copy/paste this informations in the corresponding fields :</string>
+    <string name="dietExport_3">Click on</string>
+    <!-- Used for diets AddOn -->
     <string name="category_game_btn">Help categorize products to compute the Nutri-Score</string>
     <string name="version_string">Open Food Facts Android App</string>
     <string name="version">Version</string>
-    <!-- Used for diets AddOn -->
 </resources>
