--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,12 @@
         <item>kj</item>
     </string-array>
 
+    <!-- volume units -->
+    <string-array name="volume_units" translatable="false">
+        <item>l</item>
+        <item>oz</item>
+    </string-array>
+
     <!-- nutrition weight units -->
     <string-array name="nutrition_weight_units" translatable="false">
         <item>g</item>
@@ -479,6 +485,10 @@
     <string name="nutriment_serving_size">Per portion : </string>
     <string name="action_manage_account">Manage account</string>
     <string name="action_contributes">Your contributions</string>
+    <string name="choose_energy_unit">Choose your preferred units for energy for the nutrition table</string>
+    <string name="energy_pref_title">Preferred unit for energy</string>
+    <string name="choose_volume_unit">Choose your preferred units for volume for the nutrition table</string>
+    <string name="volume_pref_title">Preferred unit for volume</string>
 
     <string name="logout_drawer">Logout</string>
     <string name="contribution_without_account">You can sign-in or create an account to keep your contributions</string>
