--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -709,9 +709,9 @@
     <string name="edit_diet_hint_so_so_ingredient">Énumérez les ingrédients problématiques qui devraient être en orange. Exemple : œuf, poisson… Vous pourrez remplir cette liste plus tard.</string>
     <string name="edit_diet_unauthorised_ingredients">Ingrédients non autorisés</string>
     <string name="edit_diet_hint_unauthorised_ingredient">Énumérez les ingrédients non autorisés qui devraient être en rouge. Exemple : gluten, lait, huile de palme, sucre... Vous pourrez remplir cette liste plus tard.</string>
-    <string name="dietExport_1">Pour avoir ce nouveau régime dans Open Food Facts, merci d\'ouvrir l\'application OFF, d\'aller dans le menu</string>
-    <string name="dietExport_2">Cliquer sur le bouton + \nEt copier/coller ces informations dans les champs correspondants :</string>
-    <string name="dietExport_3">Cliquer sur</string>
+    <string name="diet_export_1">Pour avoir ce nouveau régime dans Open Food Facts, merci d\'ouvrir l\'application OFF, d\'aller dans le menu</string>
+    <string name="diet_export_2">Cliquer sur le bouton + \nEt copier/coller ces informations dans les champs correspondants :</string>
+    <string name="diet_export_3">Cliquer sur</string>
     <!-- Used for diets AddOn -->
     <string name="nutrition_image_prompt_text">Prendre une photo du tableau nutritionnel</string>
     <string name="ingredient_image_prompt_text">Prendre une photo des ingrédients</string>
